# reimbursement

./: .gitignore  package-lock.json  package.json
.next/dev/: build-manifest.json  prerender-manifest.json  trace
.next/dev/cache/: .rscinfo
.next/dev/server/: app-paths-manifest.json  middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
.next/dev/server/app/: page.js  page_client-reference-manifest.js
.next/dev/static/chunks/: [root-of-the-server]__51d697a8._.css  [root-of-the-server]__51d697a8._.css.map  [root-of-the-server]__b58ca9d4._.css  [root-of-the-server]__b58ca9d4._.css.map  [turbopack]_browser_dev_hmr-client_hmr-client_ts_5018415b._.js  _38f98121._.js  _38f98121._.js.map  _6a3f697d._.js  _6a3f697d._.js.map  a5853_3627a091._.js  a5853_3627a091._.js.map  (+56 more)
.next/dev/types/: routes.d.ts  validator.ts
app/: globals.css  layout.tsx  page.tsx
app/analytics/: page.tsx
app/claims/: page.tsx
app/contracts/: page.tsx
app/pricing/: page.tsx
app/settings/: page.tsx
backend/: database.py  extract.py  main.py  pyproject.toml  requirements.txt  schemas.py  ufk6ws10myhhrbka65mozxz71-dpt-2-extract-results.json
components/analytics/: denial-analysis.tsx  key-metrics.tsx  payer-breakdown.tsx  revenue-chart.tsx
components/claims/: claim-stats.tsx  claims-table.tsx
components/contracts/: contract-list.tsx  upload-zone.tsx
components/layout/: app-header.tsx  app-sidebar.tsx
components/pricing/: calculator-form.tsx  recent-calculations.tsx
lib/: mock-api.ts  types.ts
(+208 files in other folders)
